# harnesses

./: .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  README.ko.md  README.md  SECURITY.md  package.json
.claude-plugin/: marketplace.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
claudecode/plugins/be-team/: AGENTS.md
claudecode/plugins/be-team/agents/: be-architect.md  be-implementer.md  be-provider.md  be-reflector.md  be-resilience.md  be-security.md  be-tester.md  be-validator.md
claudecode/plugins/debate-team/: AGENTS.md  debate.md
claudecode/plugins/debate-team/.claude-plugin/: plugin.json
claudecode/plugins/debate-team/agents/: debate-advocate-a.md  debate-advocate-b.md  debate-devils-advocate.md  debate-judge.md
claudecode/plugins/dev-team/: AGENTS.md
claudecode/plugins/dev-team/agents/: dev-backend.md  dev-frontend.md  dev-planner.md  dev-qa.md  dev-reviewer.md
claudecode/plugins/explore-team/: AGENTS.md
claudecode/plugins/explore-team/agents/: explore-evidence.md  explore-hypothesizer.md  explore-scout.md  explore-synthesizer.md
claudecode/plugins/fe-team/: AGENTS.md
claudecode/plugins/fe-team/agents/: fe-architect.md  fe-implementer.md  fe-perf.md  fe-reflector.md  fe-styler.md  (+1 more)
claudecode/plugins/ops-team/: AGENTS.md
claudecode/plugins/research-team/: AGENTS.md  research.md
claudecode/plugins/review-team/: AGENTS.md
codex/: DESIGN.md  pyproject.toml
codex/src/codex_harnesses/teams/: debate.py
core/trace/: README.md
docs/: AGENTS_MD_STANDARD.md  CREATING_TEAMS.md  PATTERNS.md  TRACE_LOG.md
(+23 files in other folders)
